# Chata

./: README.md
client/: Cargo.toml
client/src/: backend.rs  main.rs  style.rs
client_cli/: Cargo.toml
client_cli/src/: backend.rs  main.rs  text_styling.rs
client_old/src/: main.rs
server/: Cargo.toml  config.toml
server/src/: .auth.rs.kate-swp  auth.rs  client.rs  console.rs  functions.rs  input.rs  main.rs  queue.rs  user.rs
server/userdata/: 1  3  4  5  6  7  8  BrunoWallner  LucaBiendl  Luca_Biendl
server_ctrl/: Cargo.toml
server_ctrl/src/: main.rs
server_old/: Cargo.toml
server_old/src/: main.rs
thread_test/: Cargo.toml
thread_test/src/: main.rs
