[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.9.3"
rand = "0.8.3"
toml = "0.5.8"
chrono = "0.4.19"
colored = "2.0.0"
crossterm = "0.16.0"
